[package]
name = "tbf"
description = "Finds VOD playlists on Twitch."
version = "0.4.0"
authors = ["vyneer <vyneer@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
log = "0.4"
clap = { version = "2.33.3", features = ["yaml"] }
env_logger = "0.7.1"
reqwest = { version = "0.10", features = ["blocking"] }
rayon = "1.5"
rust-crypto = "0.2.36"
chrono = { version = "0.4", features = ["unstable-locales"] }
regex = "1"
indicatif = {version = "*", features = ["rayon"]}
dont_disappear = "3.0.1"
scraper = "0.12.0"
url = "2.2.0"
gql_client = "0.2.1"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4.0"

[profile.release]
lto = true
opt-level = 3