[package]
name = "tbf"
description = "Finds VOD playlists on Twitch."
version = "0.5.0"
authors = ["vyneer <vyn33r@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
clap = { version = "3", features = ["derive", "cargo"] }
env_logger = "0.9"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rayon = "1.5"
rust-crypto = "0.2.36"
chrono = { version = "0.4", features = ["unstable-locales"] }
regex = "1"
indicatif = {version = "*", features = ["rayon"]}
dont_disappear = "3.0"
scraper = "0.13.0"
url = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4.0"
colored = "2"

[profile.release]
lto = true
opt-level = 3